--- a/FilipeNobrega/Views/TileSection/Education/Education.storyboard
+++ b/FilipeNobrega/Views/TileSection/Education/Education.storyboard
@@ -6,10 +6,19 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Lato-Bold.ttf">
+            <string>Lato-Bold</string>
+        </array>
+        <array key="Lato-Regular.ttf">
+            <string>Lato-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Education View Controller-->
         <scene sceneID="yTo-sj-Bdc">
@@ -19,7 +28,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4gp-7T-EwT">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4gp-7T-EwT">
                                 <rect key="frame" x="0.0" y="20" width="414" height="716"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="OP4-In-vzx">
@@ -73,40 +82,41 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="educationTableViewCell" rowHeight="110" id="4jl-HM-llb">
-                                        <rect key="frame" x="0.0" y="328" width="414" height="110"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="College" rowHeight="120" id="4jl-HM-llb" customClass="EducationTableViewCell" customModule="FilipeNobrega" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="328" width="414" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4jl-HM-llb" id="GyQ-E1-b3Z">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="109.66666666666667"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="119.66666666666667"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PDb-ds-gXF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="109.66666666666667"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="119.66666666666667"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UFRN" translatesAutoresizingMaskIntoConstraints="NO" id="Fdj-0i-azL">
-                                                            <rect key="frame" x="15" y="15" width="79.666666666666671" height="79.666666666666671"/>
+                                                            <rect key="frame" x="15" y="15" width="90" height="90"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="Fdj-0i-azL" secondAttribute="height" multiplier="1:1" id="fgG-vO-7Fm"/>
+                                                                <constraint firstAttribute="width" constant="90" id="zMZ-r9-qRI"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Universidade Federal do Rio Grande do Norte" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZW6-u7-jCn">
-                                                            <rect key="frame" x="104.66666666666666" y="15" width="294.33333333333337" height="17"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <rect key="frame" x="114.66666666666666" y="14.999999999999996" width="284.33333333333337" height="38.666666666666657"/>
+                                                            <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BS. Computer Engineer" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="reB-RT-mgm">
-                                                            <rect key="frame" x="104.66666666666666" y="42" width="294.33333333333337" height="14.333333333333336"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <rect key="frame" x="114.66666666666666" y="63.666666666666657" width="284.33333333333337" height="17"/>
+                                                            <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Observation ()" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8fm-XR-IJB">
-                                                            <rect key="frame" x="104.66666666666666" y="66.333333333333329" width="294.33333333333337" height="15"/>
+                                                            <rect key="frame" x="114.66666666666666" y="90.666666666666671" width="284.33333333333337" height="15"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="15" id="A6J-Zg-fY0"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -118,13 +128,14 @@
                                                         <constraint firstItem="8fm-XR-IJB" firstAttribute="leading" secondItem="Fdj-0i-azL" secondAttribute="trailing" constant="10" id="LvW-Hi-CMY"/>
                                                         <constraint firstAttribute="trailing" secondItem="8fm-XR-IJB" secondAttribute="trailing" constant="15" id="PKy-IP-AZV"/>
                                                         <constraint firstItem="reB-RT-mgm" firstAttribute="top" secondItem="ZW6-u7-jCn" secondAttribute="bottom" constant="10" id="XlE-rk-OYB"/>
-                                                        <constraint firstItem="8fm-XR-IJB" firstAttribute="top" secondItem="reB-RT-mgm" secondAttribute="bottom" constant="10" id="aH2-lG-00t"/>
+                                                        <constraint firstItem="8fm-XR-IJB" firstAttribute="firstBaseline" secondItem="reB-RT-mgm" secondAttribute="baseline" constant="25" id="aH2-lG-00t"/>
                                                         <constraint firstItem="reB-RT-mgm" firstAttribute="leading" secondItem="Fdj-0i-azL" secondAttribute="trailing" constant="10" id="bdt-GY-1OG"/>
                                                         <constraint firstItem="Fdj-0i-azL" firstAttribute="leading" secondItem="PDb-ds-gXF" secondAttribute="leading" constant="15" id="hVA-f7-jUe"/>
-                                                        <constraint firstAttribute="bottom" secondItem="Fdj-0i-azL" secondAttribute="bottom" constant="15" id="oul-Hq-tnT"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Fdj-0i-azL" secondAttribute="bottom" constant="15" id="oul-Hq-tnT"/>
                                                         <constraint firstAttribute="trailing" secondItem="reB-RT-mgm" secondAttribute="trailing" constant="15" id="p9P-GM-eXQ"/>
                                                         <constraint firstItem="ZW6-u7-jCn" firstAttribute="leading" secondItem="Fdj-0i-azL" secondAttribute="trailing" constant="10" id="t3V-9i-FXq"/>
                                                         <constraint firstItem="ZW6-u7-jCn" firstAttribute="top" secondItem="Fdj-0i-azL" secondAttribute="top" id="xeR-C2-FmR"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="8fm-XR-IJB" secondAttribute="bottom" constant="5" id="zqi-d1-DE8"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
@@ -135,6 +146,13 @@
                                                 <constraint firstAttribute="bottom" secondItem="PDb-ds-gXF" secondAttribute="bottom" id="swU-IG-xbF"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="collegeImageView" destination="Fdj-0i-azL" id="vqP-tn-qmj"/>
+                                            <outlet property="majorLabel" destination="reB-RT-mgm" id="fmu-yG-X50"/>
+                                            <outlet property="nameLabel" destination="ZW6-u7-jCn" id="l47-mS-OpS"/>
+                                            <outlet property="observationBaselineConstraint" destination="aH2-lG-00t" id="Qxd-wE-REk"/>
+                                            <outlet property="observationLabel" destination="8fm-XR-IJB" id="1MC-iD-p7q"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
