--- a/FilipeNobrega/Views/TileSection/Education/EducationCollectionViewCell.xib
+++ b/FilipeNobrega/Views/TileSection/Education/EducationCollectionViewCell.xib
@@ -63,6 +63,9 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="agt-nj-YEX"/>
             <size key="customSize" width="349" height="286"/>
+            <connections>
+                <outlet property="descriptionLabel" destination="M6U-Ig-noA" id="HMO-Lz-1yW"/>
+            </connections>
             <point key="canvasLocation" x="-70.5" y="-30"/>
         </collectionViewCell>
     </objects>
