--- a/FilipeNobrega/Views/TileSection/SimpleText/FreeTextCollectionViewCell.xib
+++ b/FilipeNobrega/Views/TileSection/SimpleText/FreeTextCollectionViewCell.xib
@@ -45,6 +45,9 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="agt-nj-YEX"/>
             <size key="customSize" width="349" height="286"/>
+            <connections>
+                <outlet property="descriptionLabel" destination="M6U-Ig-noA" id="5Vl-If-cjn"/>
+            </connections>
             <point key="canvasLocation" x="-70.5" y="-30"/>
         </collectionViewCell>
     </objects>
