--- a/FilipeNobrega/Base.lproj/Main.storyboard
+++ b/FilipeNobrega/Base.lproj/Main.storyboard
@@ -76,7 +76,6 @@
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YCk-te-HJl">
                                                             <rect key="frame" x="0.0" y="5" width="33.5" height="33.5"/>
-                                                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="YCk-te-HJl" secondAttribute="height" multiplier="1:1" id="cbJ-25-42W"/>
                                                             </constraints>
@@ -201,7 +200,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ABC-iOS" translatesAutoresizingMaskIntoConstraints="NO" id="dir-w4-xRE">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dir-w4-xRE">
                                                                     <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                                                 </imageView>
                                                             </subviews>
@@ -292,7 +291,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ABC-iOS" width="60" height="60"/>
         <image name="arrowdown" width="75" height="75"/>
         <image name="avatar-placeholder" width="100" height="100"/>
     </resources>
